[gd_scene load_steps=6 format=2]

[ext_resource path="res://PiedraConPinchos.gd" type="Script" id=1]
[ext_resource path="res://Overlap/Hitbox.tscn" type="PackedScene" id=2]
[ext_resource path="res://Tileset/Decoraciones/Trampas/Traps.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[sub_resource type="Animation" id=2]
resource_name = "PiedraConPinchosGiratoria"
length = 20.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3, 5, 8, 10, 13, 15, 18, 20 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 90.0, 90.0, 180.0, 180.0, 270.0, 270.0, 360.0 ]
}

[node name="PiedraConPinchos" type="StaticBody2D"]
rotation = 2.35619
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 3 )
hframes = 40
frame = 3

[node name="HitboxUp" parent="." instance=ExtResource( 2 )]
position = Vector2( 0, -10 )
collision_layer = 128
collision_mask = 4

[node name="HitboxLeft" parent="." instance=ExtResource( 2 )]
position = Vector2( -10, 0 )
collision_layer = 128
collision_mask = 4

[node name="HitboxRight" parent="." instance=ExtResource( 2 )]
position = Vector2( 10, 0 )
collision_layer = 128
collision_mask = 4

[node name="HitboxDown" parent="." instance=ExtResource( 2 )]
position = Vector2( 0, 10 )
collision_layer = 128
collision_mask = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/PiedraConPinchosGiratoria = SubResource( 2 )
